data/derived/sp14/progs/unify/prog4616.ml.out
Characters 47-55:
  | VarX -> buildX() * 1.0;;
            ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         int
